<resources>
    <string name="app_name">My Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="subscription">Subscribtion</string>
    <string name="_2_99">$ 2.99</string>
    <string name="_50_access_to_all_categories">50% access to all categories</string>
    <string name="playNow">play Now</string>
    <string name="rocket_logo">Rocket Logo</string>
    <string name="_100_access_to_all_categories">100% access to all categories</string>
    <string name="_4_99">$ 4.99</string>
    <string name="skip_now">Skip Now</string>
    <string name="choose_a_category">Choose A Category</string>
    <string name="categories_menu">Categories Menu</string>
    <string name="category_icon">Category Icon</string>
    <string name="entertainers_amp_artists"><![CDATA[Entertainers & Artists]]></string>
    <string name="manage_subscriptions">Manage Subscriptions</string>
    <string name="selected_plan">Selected Plan</string>
    <string name="upgradenow">upgradeNow</string>
    <string name="game_time">Game Time</string>
    <string name="timer">timer</string>
    <string name="_15_mins">15 mins</string>
    <string name="_30_mins">30 mins</string>
    <string name="_60_mins">60 mins</string>
    <string name="choose_player">Choose Player</string>
    <string name="single_player">Single Player</string>
    <string name="two_players">Two Players</string>
    <string name="four_players">Four Players</string>
    <string name="three_players">Three Players</string>
    <string name="alert">Alert...!</string>
    <string name="cancel">Cancel</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="subscribe_for_30_minutes_timer_thanks">Subscribe for 30 minutes timer…thanks!</string>
    <string name="are_you_ready_to_stop_play_right_now">Are you ready to stop play right now?</string>
    <string name="sport">Sport</string>
    <string name="which_of_the_following_country_has_host_the_commonwealth_games_maximum_number_of_times">Which of the following country has host the Commonwealth Games maximum number of times?</string>
    <string name="exit">exit</string>
    <string name="next">next</string>
    <string name="answer">Answer</string>
    <string name="player_1">Player 1</string>
    <string name="play_again">Play Again</string>
    <string name="exit_game">Exit</string>
    <string name="score_2">Score 2</string>
    <string name="player_1_score">Player 1</string>
</resources>