<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.Subscription.ManageSubscription">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarManageSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.000">

        <ImageView
            android:id="@+id/backManage"
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_18sdp"
            android:contentDescription="@string/categories_menu"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/manageSub"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/manage_subscriptions"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarManageSub">


        <TextView
            android:id="@+id/selectedPlan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/selected_plan"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.056"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/manageRocket"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_100sdp"
            android:rotation="-21"
            android:src="@drawable/iv_rocket_299"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selectedPlan"
            app:layout_constraintVertical_bias="0.109"
            android:contentDescription="@string/rocket_logo" />

        <TextView
            android:id="@+id/managePrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/_2_99"
            android:textColor="@color/ground"
            android:textSize="@dimen/_19ssp"
            app:layout_constraintBottom_toTopOf="@+id/tv_descManage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/manageRocket"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_descManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/_50_access_to_all_categories"
            android:textColor="@color/black"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/upgradeNow"
            android:layout_width="@dimen/_90sdp"
            android:layout_height="@dimen/_31sdp"
            android:src="@drawable/ic_upgrade_now"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.945"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_descManage"
            app:layout_constraintVertical_bias="0.16"
            android:contentDescription="@string/upgradenow" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>