<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.QuizGame">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarQuizGame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/quizIconGame"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_18sdp"
            android:contentDescription="@string/categories_menu"
            android:src="@drawable/ic_category_icon" />

        <TextView
            android:id="@+id/quizType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/sport"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_1"
            android:textColor="@color/ground"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/montserrat_medium"
            android:layout_gravity="right"
            android:layout_marginEnd="@dimen/_16sdp"/>
    </androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/questionTimer"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:src="@drawable/ic_question_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarQuizGame" />

    <ImageView
        android:layout_width="@dimen/_10sdp"
        android:layout_height="@dimen/_14sdp"
        android:src="@drawable/ic_on_play"
        app:layout_constraintBottom_toBottomOf="@+id/questionTimer"
        app:layout_constraintEnd_toEndOf="@+id/questionTimer"
        app:layout_constraintStart_toStartOf="@+id/questionTimer"
        app:layout_constraintTop_toTopOf="@+id/questionTimer" />

    <TextView
        android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:fontFamily="@font/montserrat_medium"
        android:lineHeight="@dimen/_25sdp"
        android:text="@string/which_of_the_following_country_has_host_the_commonwealth_games_maximum_number_of_times"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionTimer"
        tools:targetApi="p" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerQuestions"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/questionText"
        app:layout_constraintVertical_bias="0.0"
        android:overScrollMode="never"
        tools:listitem="@layout/item_question"/>

    <RelativeLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/exit"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:contentDescription="@string/exit"
            android:src="@drawable/ic_exit_game" />

        <ImageView
            android:id="@+id/next"
            android:layout_alignParentRight="true"
            android:layout_width="@dimen/_34sdp"
            android:layout_height="@dimen/_34sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:src="@drawable/ic_next_game"
            android:contentDescription="@string/next"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
