<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.subscriptionSkip"
    android:background="@color/white">


    <TextView
        android:id="@+id/subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/subscription"
        android:textColor="@color/black"
        android:textSize="@dimen/_24ssp"
        app:layout_constraintBottom_toTopOf="@+id/cv_sale1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sale1"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_128sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.174" >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cl_sale1">

            <TextView
                android:id="@+id/tv_priceSale1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/_2_99"
                android:textColor="@color/ground"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@+id/tv_descSale1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.121"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_descSale1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/_50_access_to_all_categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/playNow_sale1"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:contentDescription="@string/playNow"
                android:src="@drawable/iv_play_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_descSale1"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/rocket_sale1"
                android:layout_width="@dimen/_66sdp"
                android:layout_height="@dimen/_31sdp"
                android:src="@drawable/iv_rocket_299"
                android:rotation="-11"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_descSale1"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/rocket_logo"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_sale2"
        android:layout_width="@dimen/_270sdp"
        android:layout_height="@dimen/_128sdp"
        app:cardCornerRadius="@dimen/_7sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_sale1"
        app:layout_constraintVertical_bias="0.15">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_sale2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_priceSale2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/_4_99"
                android:textColor="@color/ground"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintBottom_toTopOf="@+id/tv_descSale2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.121"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_descSale2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/_100_access_to_all_categories"
                android:textColor="@color/black"
                android:textSize="@dimen/_12ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.261"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/playNow_sale2"
                android:layout_width="@dimen/_75sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:contentDescription="@string/playNow"
                android:src="@drawable/iv_play_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.133"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_descSale2"
                app:layout_constraintVertical_bias="1.0" />

            <ImageView
                android:id="@+id/rocket_sale2"
                android:layout_width="@dimen/_66sdp"
                android:layout_height="@dimen/_31sdp"
                android:contentDescription="@string/rocket_logo"
                android:rotation="-11"
                android:src="@drawable/iv_rocket_299"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_descSale2"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/skipNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_now"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/ground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_sale2" />

</androidx.constraintlayout.widget.ConstraintLayout>