<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.GameScreens.PlayersScore"
    android:background="@color/ground">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/cardPlayAgain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.455"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="@dimen/_10sdp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/_30sdp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/_86sdp"
                android:layout_height="@dimen/_87sdp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_score_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/game_time" />
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_60sdp"
                tools:listitem="@layout/item_players_score"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPlayAgain"
        android:layout_width="@dimen/_290sdp"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="@dimen/_9sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        android:backgroundTint="@color/ground"
        app:strokeColor="@color/white"
        app:strokeWidth="1dp">

        <TextView
            android:id="@+id/playAgain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/montserrat_semibold"
            android:text="@string/play_again"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />


    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/ExitScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/exit_game"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cardPlayAgain"
        app:layout_constraintStart_toStartOf="@+id/cardPlayAgain"
        app:layout_constraintTop_toBottomOf="@+id/cardPlayAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>